fixed more content grammar and also fixed the show more cutting off mid line

--- a/frontend/src/scss/testimonials.scss
+++ b/frontend/src/scss/testimonials.scss
@@ -96,7 +96,7 @@
 
     .test-text {
         width: 95%;
-        margin: 1rem auto 2rem;
+        margin: 1rem auto 0rem;
         color: #fff;
 
         h3 {
@@ -112,7 +112,7 @@
         }
         
         div {
-            margin: 0 .5rem 1rem;
+            margin: 0 .5rem .5rem;
             p {
                 text-align: left; 
                 padding: 0 1rem 2rem;
@@ -122,9 +122,6 @@
                 }
                 @include respond(tablet){
                     font-size: 1.3rem;            
-                }
-                @include respond(largeDesktop){
-                    font-size: 1.4rem;     
                 }
             }
         }
