--- a/frontend/src/scss/workModal.scss
+++ b/frontend/src/scss/workModal.scss
@@ -40,6 +40,8 @@
         text-transform: uppercase;
         color: slategray;
 
+        text-decoration: underline;
+        text-decoration-line: 5px;
 
         font-size: 1.3rem;
         margin: 0 0 1rem;
